Tue May 05 23:24:21 GMT 2015  Olly Betts <olly@survex.com>

	* api/queryinternal.cc,matcher/: Split NearPostList out into separate
	  source file and header.

Tue May 05 15:25:22 GMT 2015  Olly Betts <olly@survex.com>

	* bin/xapian-progsrv.cc: Fix comment typo.

Tue May 05 15:23:48 GMT 2015  Olly Betts <olly@survex.com>

	* backends/flint/flint_cursor.cc,backends/flint/flint_table.cc,
	  tests/api_backend.cc: Fix #675 for flint as well.

Tue May 05 15:02:51 GMT 2015  Olly Betts <olly@survex.com>

	* backends/brass/brass_cursor.cc,backends/brass/_table.cc,
	  backends/chert/chert_cursor.cc,backends/chert/chert_table.cc:
	  Potentially increment the cursor version on cancel() or when the
	  database is reopened, and flag the current cursor version as used
	  when a cursor is rebuilt.  Fixes #675, reported by Germán M. Bravo.
	* tests/api_backend.cc: Add regression test cursorbug1 based on
	  reproducer supplied by Germán.

Tue May 05 14:26:01 GMT 2015  Olly Betts <olly@survex.com>

	* common/errno_to_string.cc: Fix to build with Sun's C++ compiler.

Tue May 05 14:24:24 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Fix XAPIAN_TEST_CXXFLAGS macro to append to the
	  existing value of the variable, not its name.

Tue May 05 14:23:10 GMT 2015  Olly Betts <olly@survex.com>

	* tests/api_wrdb.cc: Just #ifdef out the problematic part of the
	  adddoc5 testcase for clang.

Tue May 05 14:12:42 GMT 2015  Olly Betts <olly@survex.com>

	* common/serialise-double.cc: Fix bug in recent fix.
	* tests/unittest.cc: Extend serialise_double() to provide regression
	  test.

Tue May 05 14:08:58 GMT 2015  Olly Betts <olly@survex.com>

	* common/serialise-double.cc: Add missing cast to unsigned char when
	  we check if the value will fit in the double type.  On machines with
	  IEEE-754 doubles (which is most current platforms), which change
	  makes no difference as we're checking if the value cast to a double
	  is > 255.<something> which is never the case.
