@@ -1,14 +1,12 @@
-/* phrasepostlist.cc: Return only items where terms form a phrase
+/** @file phrasepostlist.cc
+ * @brief Return docs containing terms forming a particular phrase.
+ */
+/* Copyright (C) 2006,2007,2009,2010,2011,2014,2015 Olly Betts
  *
- * Copyright 1999,2000,2001 BrightStation PLC
- * Copyright 2002 Ananova Ltd
- * Copyright 2002,2003,2004,2007,2008,2009,2014 Olly Betts
- * Copyright 2009 Lemur Consulting Ltd
- *
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License as
- * published by the Free Software Foundation; either version 2 of the
- * License, or (at your option) any later version.
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
  *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -17,11 +15,11 @@
  *
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301
- * USA
+ * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
  */
 
 #include <config.h>
+
 #include "phrasepostlist.h"
 
 #include "debuglog.h"
@@ -30,110 +28,62 @@
 #include "str.h"
 
 #include <algorithm>
+#include <vector>
 
-/** Class providing an operator which returns true if a has a (strictly)
- *  smaller number of postings than b.
- */
-class PositionListCmpLt {
-    public:
-	/** Return true if and only if a is strictly shorter than b.
-	 */
-        bool operator()(const PositionList *a, const PositionList *b) {
-            return a->get_size() < b->get_size();
-        }
-};
+using namespace std;
 
+PhrasePostList::PhrasePostList(PostList *source_,
+			       Xapian::termpos window_,
+			       const vector<PostList*>::const_iterator &terms_begin,
+			       const vector<PostList*>::const_iterator &terms_end)
+    : SelectPostList(source_), window(window_), terms(terms_begin, terms_end)
+{
+    size_t n = terms.size();
+    Assert(n > 1);
+    poslists = new PositionList*[n];
+}
 
-/** Check if terms form a phrase in the current doc
- */
+PhrasePostList::~PhrasePostList()
+{
+    delete [] poslists;
+}
+
+void
+PhrasePostList::start_position_list(unsigned i)
+{
+    poslists[i] = terms[i]->read_position_list();
+}
+
 bool
 PhrasePostList::test_doc()
 {
     LOGCALL(MATCH, bool, "PhrasePostList::test_doc", NO_ARGS);
-    std::vector<PositionList *> plists;
 
-    std::vector<PostList *>::const_iterator i;
-    for (i = terms.begin(); i != terms.end(); ++i) {
-	PositionList * p = (*i)->read_position_list();
-	// If p is NULL, the backend doesn't support positionlists
-	if (!p) return false;
-	p->index = i - terms.begin();
-	plists.push_back(p);
-    }
+    start_position_list(0);
+    poslists[0]->next();
+    if (poslists[0]->at_end()) RETURN(false);
 
-    std::sort(plists.begin(), plists.end(), PositionListCmpLt());
-
-    Xapian::termpos pos;
-    Xapian::termpos idx, min, max;
+    unsigned read_hwm = 0;
     do {
-	plists[0]->next();
-	if (plists[0]->at_end()) {
-	    LOGLINE(MATCH, "--MISS--");
-	    RETURN(false);
-	}
-	pos = plists[0]->get_position();
-	idx = plists[0]->index;
-	if (idx == 0) {
-	    min = pos;
-	} else {
-	    min = pos + plists.size() - idx;
-	    if (min > window) min -= window; else min = 0;
-	}
-	if (idx == plists.size() - 1) {
-	    max = pos + 1;
-	} else {
-	    max = pos + window - idx;
-	}
-    } while (!do_test(plists, 1, min, max));
-    LOGLINE(MATCH, "**HIT**");
-    RETURN(true);
-}
-
-bool
-PhrasePostList::do_test(std::vector<PositionList *> &plists, Xapian::termcount i,
-			Xapian::termcount min, Xapian::termcount max)
-{
-    LOGCALL(MATCH, bool, "PhrasePostList::do_test", plists | i | min | max);
-    LOGLINE(MATCH, "docid = " << get_docid() << ", window = " << window);
-    Xapian::termpos idxi = plists[i]->index;
-    LOGLINE(MATCH, "my idx in phrase is " << idxi);
-
-    Xapian::termpos mymin = min + idxi;
-    Xapian::termpos mymax = max - plists.size() + idxi;
-    LOGLINE(MATCH, "MIN = " << mymin << " MAX = " << mymax);
-    // FIXME: this is worst case O(n^2) where n = length of phrase
-    // Can we do better?
-    for (Xapian::termcount j = 0; j < i; j++) {
-	Xapian::termpos idxj = plists[j]->index;
-	if (idxj > idxi) {
-	    Xapian::termpos tmp = plists[j]->get_position() + idxj - idxi;
-	    LOGLINE(MATCH, "ABOVE " << tmp);
-	    if (tmp < mymax) mymax = tmp;
-	} else {
-	    AssertRel(idxi, !=, idxj);
-	    Xapian::termpos tmp = plists[j]->get_position() + idxi - idxj;
-	    LOGLINE(MATCH, "BELOW " << tmp);
-	    if (tmp > mymin) mymin = tmp;
-	}
-	LOGLINE(MATCH, "min = " << mymin << " max = " << mymax);
-    }
-    plists[i]->skip_to(mymin);
-
-    while (!plists[i]->at_end()) {
-	Xapian::termpos pos = plists[i]->get_position();
-	LOGLINE(MATCH, " " << mymin << " " << pos << " " << mymax);
-	if (pos > mymax) RETURN(false);
-	if (i + 1 == plists.size()) RETURN(true);
-	Xapian::termpos tmp = pos + window - idxi;
-	if (tmp < max) max = tmp;
-	tmp = pos + plists.size() - idxi;
-	if (tmp > window) {
-	    tmp -= window;
-	    if (tmp > min) min = tmp;
-	}
-	if (do_test(plists, i + 1, min, max)) RETURN(true);
-	plists[i]->next();
-    }
+	Xapian::termpos base = poslists[0]->get_position();
+	Xapian::termpos pos = base;
+	Xapian::termpos b;
+	unsigned i = 0;
+	do {
+	    if (++i == terms.size()) RETURN(true);
+	    if (i > read_hwm) {
+		read_hwm = i;
+		start_position_list(i);
+	    }
+	    poslists[i]->skip_to(pos + 1);
+	    if (poslists[i]->at_end()) RETURN(false);
+	    pos = poslists[i]->get_position();
+	    b = pos + (terms.size() - i);
+	} while (b - base <= window);
+	// Advance the start of the window to the first position it could match
+	// in given the current position of term i.
+	poslists[0]->skip_to(b - window);
+    } while (!poslists[0]->at_end());
     RETURN(false);
 }
 
@@ -143,21 +93,22 @@ PhrasePostList::get_wdf() const
     // Calculate an estimate for the wdf of a phrase postlist.
     //
     // We use the minimum wdf of a sub-postlist as our estimate.  See the
-    // comment in NearPostList::get_wdf for justification of this estimate.
-    //
-    // We divide the value calculated for a NearPostList by 2, as a very rough
-    // heuristic to represent the fact that the words must occur in order, and
-    // phrases are therefore rarer than near matches.
-
-    std::vector<PostList *>::const_iterator i = terms.begin();
+    // comment in NearPostList::get_wdf() for justification of this estimate.
+    vector<PostList *>::const_iterator i = terms.begin();
     Xapian::termcount wdf = (*i)->get_wdf();
     for (; i != terms.end(); ++i) {
-	wdf = std::min(wdf, (*i)->get_wdf());
+	wdf = min(wdf, (*i)->get_wdf());
     }
+    return wdf;
+}
 
-    // Ensure that we always return a wdf of at least 1, since we know there
-    // was at least one occurrence of the phrase.
-    return std::max(wdf / 2, Xapian::termcount(1));
+Xapian::doccount
+PhrasePostList::get_termfreq_est() const
+{
+    // It's hard to estimate how many times the phrase will occur as
+    // it depends a lot on the phrase, but usually the phrase will
+    // occur significantly less often than the individual terms.
+    return source->get_termfreq_est() / 3;
 }
 
 TermFreqs
@@ -165,16 +116,21 @@ PhrasePostList::get_termfreq_est_using_stats(
 	const Xapian::Weight::Internal & stats) const
 {
     LOGCALL(MATCH, TermFreqs, "PhrasePostList::get_termfreq_est_using_stats", stats);
-    // No idea how to estimate this - FIXME
+    // No idea how to estimate this - do the same as get_termfreq_est() for
+    // now.
     TermFreqs result(source->get_termfreq_est_using_stats(stats));
     result.termfreq /= 3;
     result.reltermfreq /= 3;
     RETURN(result);
 }
 
-std::string
+string
 PhrasePostList::get_description() const
 {
-    return "(Phrase " + str(window) + " "
-	   + source->get_description() + ")";
+    string m = "(Phrase ";
+    m += str(window);
+    m += ' ';
+    m += source->get_description();
+    m += ")";
+    return m;
 }
