@@ -1,14 +1,13 @@
 /** @file phrasepostlist.h
- * @brief Return only items where terms form a phrase
- */
-/* Copyright 1999,2000,2001 BrightStation PLC
- * Copyright 2003,2004,2005,2014 Olly Betts
- * Copyright 2009 Lemur Consulting Ltd
+ * @brief Return docs containing terms forming a particular phrase.
  *
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License as
- * published by the Free Software Foundation; either version 2 of the
- * License, or (at your option) any later version.
+ * Copyright (C) 2006,2015 Olly Betts
+ * Copyright (C) 2009 Lemur Consulting Ltd
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
  *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -17,53 +16,56 @@
  *
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301
- * USA
+ * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
  */
 
-#ifndef OM_HGUARD_PHRASEPOSTLIST_H
-#define OM_HGUARD_PHRASEPOSTLIST_H
+#ifndef XAPIAN_INCLUDED_PHRASEPOSTLIST_H
+#define XAPIAN_INCLUDED_PHRASEPOSTLIST_H
 
 #include "selectpostlist.h"
 #include <vector>
 
 typedef Xapian::PositionIterator::Internal PositionList;
 
-/** A postlist comprising several postlists PHRASEd together.
+/** Postlist which matches a phrase using positional information.
  *
- *  This postlist returns a posting if and only if it is in all of the
- *  sub-postlists and all the terms occur IN THE GIVEN ORDER within a
- *  specified distance of each other somewhere in the document.  The weight
- *  for a posting is the sum of the weights of the sub-postings.
+ *  PhrasePostList only returns a posting for documents contains
+ *  all the terms (this part is implemented using an AndPostList) and
+ *  additionally the terms occur somewhere in the document in the order given
+ *  and within a specified number of term positions.
+ *
+ *  The weight of a posting is the sum of the weights of the
+ *  sub-postings (just like an AndPostList).
  */
 class PhrasePostList : public SelectPostList {
-    private:
-        Xapian::termpos window;
-	std::vector<PostList *> terms;
+    Xapian::termpos window;
 
-    	bool test_doc();
-        bool do_test(std::vector<PositionList *> &plists, Xapian::termcount i,
-		     Xapian::termcount min, Xapian::termcount max);
-    public:
-	std::string get_description() const;
-	Xapian::termcount get_wdf() const;
+    std::vector<PostList*> terms;
 
-	Xapian::doccount get_termfreq_est() const
-	{
-	    // No idea how to estimate this - FIXME
-	    return source->get_termfreq_est() / 3;
-	}
+    PositionList ** poslists;
 
-	TermFreqs get_termfreq_est_using_stats(
-            const Xapian::Weight::Internal & stats) const;
+    /// Start reading from the i-th position list.
+    void start_position_list(unsigned i);
 
-        PhrasePostList(PostList *source_, Xapian::termpos window_,
-		       std::vector<PostList *>::const_iterator &terms_begin_,
-		       std::vector<PostList *>::const_iterator &terms_end_)
-	    : SelectPostList(source_), terms(terms_begin_, terms_end_)
-        {
-	    window = window_;
-	}
+    /// Test if the current document contains the terms as a phrase.
+    bool test_doc();
+
+  public:
+    PhrasePostList(PostList *source_,
+		   Xapian::termpos window_,
+		   const std::vector<PostList*>::const_iterator &terms_begin,
+		   const std::vector<PostList*>::const_iterator &terms_end);
+
+    ~PhrasePostList();
+
+    Xapian::termcount get_wdf() const;
+
+    Xapian::doccount get_termfreq_est() const;
+
+    TermFreqs get_termfreq_est_using_stats(
+	const Xapian::Weight::Internal & stats) const;
+
+    std::string get_description() const;
 };
 
-#endif /* OM_HGUARD_PHRASEPOSTLIST_H */
+#endif
